db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.26
          volumeMounts:
            - name: volume1
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
      volumes:
        - name: volume1
          persistentVolumeClaim:
            claimName: pvc1
