flask-ingress.yaml
apiVersion: networking.k8s.io/v2
kind: Ingress
metadata:
  name: 'osint-flask-ingress'
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: eks-demo-group
    alb.ingress.kubernetes.io/group.order: '1'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: 'osint-flask'
                port:
                  number: 5000
